# Sweet-Models-Project

./: AUTH_GUIDE.md  OPTIMIZATION_COMPLETE.md  PERFORMANCE_GUIDE.md  QUICKSTART_AUTH.md  README.md  README_DASHBOARD.md  REFERENCE_CARD.md  SUMARIO_DASHBOARD.txt  index.html  package-lock.json  package.json  tailwind.config.js
backend-rust/: .env.example  .gitignore  Cargo.toml  README.md
backend-rust/migrations/: 01_initial_schema.sql
backend-rust/src/: main.rs
scripts/: create_admin_user.mjs  create_group.mjs  create_users.mjs  filter_views.mjs  query_groups.mjs
src/: App.jsx  App_backup.jsx  firebase.js  index.css  main.jsx
src/components/: DollarStudioCard.jsx  ErrorBoundary.jsx  Header.jsx  Layout.jsx  Login.jsx  ModelsTable.jsx
src/pages/: Home.jsx  Reports.jsx  Settings.jsx  Users.jsx
src/utils/: formatters.js
