[package]
name = "backend-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.7", features = ["macros"] }
tokio = { version = "1.48.0", features = ["full"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tower-http = { version = "0.6.7", features = ["cors"] }
dotenvy = "0.15.7"
uuid = { version = "1.11.1", features = ["serde", "v4"] }
chrono = { version = "0.4.39", features = ["serde"] }
bcrypt = "0.16.0"
jsonwebtoken = { version = "10.2.0", default-features = false, features = ["rust_crypto"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
